@@ -110,7 +110,7 @@ public class RelayRace extends TimedRace {
     @SuppressWarnings("MethodOverridesStaticMethodOfSuperclass")
     public static void main(final String[] args) throws Exception {
 
-        commonMain(args, config_file_path -> new RelayRace(Paths.get(config_file_path)));
+        commonMain(args, config_file_path -> new RelayRace(Path.of(config_file_path)));
     }
 
     //////////////////////////////////////////////////////////////////////////////////////////////////
