@@ -21,13 +21,13 @@ package org.grahamkirby.race_timing_experimental.individual_race;
 import org.grahamkirby.race_timing_experimental.common.Race;
 
 import java.io.IOException;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 public class IndividualRaceTest {
 
     public static void main(String[] args) throws IOException {
 
-        Race individual_race = IndividualRaceFactory.makeIndividualRace(Paths.get("src/main/resources/individual_race/balmullo/2024/input/config.txt"));
+        Race individual_race = IndividualRaceFactory.makeIndividualRace(Path.of("src/main/resources/individual_race/balmullo/2024/input/config.txt"));
         individual_race.processResults();
     }
 }
